--- a/HeaderFooter/footer.html
+++ b/HeaderFooter/footer.html
@@ -1,5 +1,5 @@
 <footer>
-    <p>© 2024 ElTItoJuandee Inc</p>
+    <p>© 2024 ElTitoJuandee Inc</p>
     <ul class="footer-nav">
         <li><a href="#">Inicio</a></li>
         <li><a href="#">FAQs</a></li>
