--- a/HeaderFooter/header.html
+++ b/HeaderFooter/header.html
@@ -2,10 +2,10 @@
     <h3>Agenda personal</h3>
     <div>
         <ul>
-            <li><a href="../Controlador/index.php?action=Amigo">AMIGOS</a></li>
-            <li><a href="../Controlador/index.php?action=Juego">JUEGOS</a></li>
-            <li><a href="../Controlador/index.php?action=Prestamo">PRESTAMOS</a></li>
-            <li><a href="../Controlador/index.php?action=Salir">SALIR</a></li>
+            <li><a href="../Controlador/index.php?action=dashboard">AMIGOS</a></li>
+            <li><a href="../Controlador/index.php?action=listarJuegos">JUEGOS</a></li>
+            <li><a href="../Controlador/index.php?action=listarPrestamos">PRESTAMOS</a></li>
+            <li><a href="../Controlador/index.php?action=salir">SALIR</a></li>
         </ul>
     </div>
 </div
